Fixed category tab jumping

--- a/app/assets/stylesheets/venues.css.scss
+++ b/app/assets/stylesheets/venues.css.scss
@@ -18,6 +18,7 @@
 #categoryTab {
   margin: 0 auto;
   border-bottom: none;
+  min-height: 55px;
 }
 
 #venue-spinner {
